fix right direction edge alignment

--- a/packages/workflow/src/ui/ui.css
+++ b/packages/workflow/src/ui/ui.css
@@ -130,7 +130,6 @@
   cursor: pointer;
   height: 2px;
   width: 2px;
-  margin-top: 1px;
 }
 
 .wf-node-selected {
